--- a/assets/images/css/estilo.css
+++ b/assets/images/css/estilo.css
@@ -1,16 +1,28 @@
+
+*{
+  padding: 0;margin: 0;
+  box-sizing: border-box;
+}
 /* Header */
 .header{
   background-color: #C0392B;
+  background-image: linear-gradient(#c0392c, #E74C3C);
 }
 .header--title{
   color: white;
   text-shadow: 1px 1px 2px #000000;
   font-family: 'Roboto', sans-serif;
-  font-size: 32px
+  font-size: 32px;
+  padding: 30px;
+  text-align: center;
+
 }
 .header--title-bgwhite{
   color: #C0392B;
   background-color: white;
+  padding: 6px;
+  border-radius: 6px;
+
 }
 /* serie cover main page */
 .serie{
@@ -19,16 +31,20 @@
 .serie--title{
   font-family: 'Open Sans', sans-serif;
   font-size: 28px;
+  padding: 20px 0px 2.5px;
 }
 .serie--genre{
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   color: #a9a9a9;
   display: block;
+  padding: 2.5px 0px 20px;
 }
 .serie--image{
 display: block;
 max-width: 328px;
+margin: 0 auto;
+border-radius: 5px;
 }
 .serie--readmore{
   color: white;
@@ -36,11 +52,14 @@ max-width: 328px;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
   display: block;
+  padding: 7px;
+  margin: 10px auto;
+  max-width: 328px;
+  border-radius: 5px;
 }
 .serie--readmore:hover{
   background-color: #E74C3C;
 }
-
 /* Footer */
 .footer{
   background-color: #EEEEEE;
@@ -48,7 +67,85 @@ max-width: 328px;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
+.footer--element{
+      padding: 20px;
+      
+    }
 .footer--image{
   width: 25px;
   height: 25px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+/* serie detail cover main page */
+.seriedetail{
+  text-align: center;
+}
+.seriedetail--title{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 28px;
+  padding: 20px 0px 2.5px;
+}
+.seriedetail--genre{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #a9a9a9;
+  display: block;
+  padding: 2.5px 0px 20px;
+}
+.seriedetail--image{
+display: block;
+max-width: 328px;
+margin: 0 auto;
+border-radius: 5px;
+}
+.seriedetail--texto{
+  font-size: 18px;
+  font-family: 'Roboto' , sans-serif;
+  line-height: 1.5;
+  max-width: 328px;
+  margin: 10px auto;
+  text-align: left;
+}
+.seriedetail--watchtrailler{
+  color: #000000;
+  background-color: #F1c40F;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  display: block;
+  padding: 7px;
+  margin: 10px auto;
+  max-width: 328px;
+  border-radius: 5px;
+  text-align: center;
+}
+.serie--readmore:hover{
+  background-color: #E74C3C;
+}
+
+/* serie avaliation */
+.serieavaliation{
+background-color: #EEEEEE;
+margin: 10px;
+}
+.serieavaliation--title{
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  padding: 30px 0 10px; 
+}
+.serieavaliation--images{
+  text-align: center;
+  padding: 30px;
+}
+.serieavaliation--twitter{
+  margin: 0 20px;
+}
+.serieavaliation--percent{
+  color: #27AE60;
+  font-size: 37px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+
 }
